--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "nuxt": "^3.17.5",
+    "preline": "^3.2.3",
     "shadcn-docs-nuxt": "^1.0.6",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
